--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical">
-<!--    <Button-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="hukjbkn"-->
-<!--        android:background="@color/black"-->
-<!--        android:enabled="true" />-->
+
     <LinearLayout
+        android:id="@+id/player"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="100dp"
@@ -145,8 +141,6 @@
             android:textSize="20sp">
         </Button>
     </LinearLayout>
-
-
 
 
 </LinearLayout>
